# spherex-sphinx

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  periodic-ci.yaml
demo/ipynb-technote/: conf.py  index.ipynb
demo/md-technote/: index.md  technote.toml
demo/rst-technote/: index.rst
docs/: _rst_epilog.rst  conf.py  index.rst  spherex.toml
docs/dev/: api.rst  development.rst  index.rst
docs/user-guide/: base-config.rst  creating-an-api-reference.rst  crossref.rst  getting-started.rst  index.rst  spherex-toml.rst  writing-docstrings.rst  writing-for-sphinx.rst
src/spherexsphinx/: __init__.py
src/spherexsphinx/assets/: spherex-technote.css
src/spherexsphinx/conf/: __init__.py  _utils.py  base.py  technote.py
src/spherexsphinx/ext/: crossref.py
src/spherexsphinx/templates/technote/components/: sidebar-source.html
tests/: conf_utils_test.py  conftest.py  version_test.py
tests/ext/: crossref_test.py
tests/roots/test-crossref/: conf.py  index.rst  spherex.toml
